# normal-map-generator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: normal_map_generator.hpp
scripts/: travis_install_catch2.sh  travis_install_opencv.sh
src/: main.cpp  normal_map_generator.cpp
tests/: CMakeLists.txt
tests/src/: normal_map_generator_tests.cpp
